{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 56,
  "lineage": "607f4110-033f-e61b-e8ba-e1f7ead6b4ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:security-group/sg-0a5a2a123c6f1d756",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0a5a2a123c6f1d756",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01aab6eaf86ea299d",
            "domain": "vpc",
            "id": "eipalloc-0e92b6175f00b64b7",
            "network_interface": "eni-0ebe919889e4daf4c",
            "private_dns": "ip-20-0-21-221.ec2.internal",
            "private_ip": "20.0.21.221",
            "public_dns": "ec2-54-81-226-11.compute-1.amazonaws.com",
            "public_ip": "54.81.226.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-us-east-1a",
              "Owner": "user"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-005475cccfc4ca675",
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e92b6175f00b64b7",
            "id": "nat-0b4649ed132f8f133",
            "network_interface_id": "eni-0ebe919889e4daf4c",
            "private_ip": "20.0.21.221",
            "public_ip": "54.81.226.11",
            "subnet_id": "subnet-078c0fa52a002d25f",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-us-east-1a",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005475cccfc4ca675",
            "id": "r-rtb-0a26970daf8b7c7211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a26970daf8b7c721",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01f2f3d6d53f573001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0b4649ed132f8f133",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f2f3d6d53f57300",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005475cccfc4ca675",
            "id": "r-rtb-0c7d7fa2c63bd91331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c7d7fa2c63bd9133",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a26970daf8b7c721",
            "owner_id": "516851544810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005475cccfc4ca675",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-db",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01f2f3d6d53f57300",
            "owner_id": "516851544810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b4649ed132f8f133",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-private",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c7d7fa2c63bd9133",
            "owner_id": "516851544810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005475cccfc4ca675",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-public",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1bd745da5eb9bf8",
            "route_table_id": "rtb-0a26970daf8b7c721",
            "subnet_id": "subnet-09a6a99dba26e03f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064ab151222ad09d9",
            "route_table_id": "rtb-0a26970daf8b7c721",
            "subnet_id": "subnet-0f35ec991d8d25a47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fd5d45195b3c09e",
            "route_table_id": "rtb-01f2f3d6d53f57300",
            "subnet_id": "subnet-0e4cc23506a330747"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db71aaead16b4be4",
            "route_table_id": "rtb-01f2f3d6d53f57300",
            "subnet_id": "subnet-05edadaa7f3bb94ac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0364ce7e010057363",
            "route_table_id": "rtb-0c7d7fa2c63bd9133",
            "subnet_id": "subnet-078c0fa52a002d25f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e430ec22e3b6027",
            "route_table_id": "rtb-0c7d7fa2c63bd9133",
            "subnet_id": "subnet-0d8ee481750d68c79"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:security-group/sg-0d37c54e89ef272e8",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d37c54e89ef272e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5a2a123c6f1d756"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "computed-postgres-sg-20200607134101770200000004",
            "name_prefix": "computed-postgres-sg-",
            "owner_id": "516851544810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "computed-postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:security-group/sg-03658f76c2ac461b4",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-03658f76c2ac461b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow ping access-20200608020646511600000001",
            "name_prefix": "Allow ping access-",
            "owner_id": "516851544810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow ping access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-3354828690",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d37c54e89ef272e8",
            "self": false,
            "source_security_group_id": "sg-0a5a2a123c6f1d756",
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "module.postgresql_sg.module.sg.aws_security_group.this",
            "module.postgresql_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3786024008",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d37c54e89ef272e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.postgresql_sg.module.sg.aws_security_group.this",
            "module.postgresql_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-365078523",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d37c54e89ef272e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "module.postgresql_sg.module.sg.aws_security_group.this",
            "module.postgresql_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 8,
            "id": "sgrule-2413606490",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-03658f76c2ac461b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.ping_sg.aws_security_group.this",
            "module.ping_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-3881809427",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d37c54e89ef272e8",
            "self": true,
            "source_security_group_id": "sg-0d37c54e89ef272e8",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.postgresql_sg.module.sg.aws_security_group.this",
            "module.postgresql_sg.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.postgresql_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ping_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:subnet/subnet-09a6a99dba26e03f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.11.0/24",
            "id": "subnet-09a6a99dba26e03f4",
            "map_public_ip_on_launch": false,
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-db-us-east-1a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:subnet/subnet-0f35ec991d8d25a47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.12.0/24",
            "id": "subnet-0f35ec991d8d25a47",
            "map_public_ip_on_launch": false,
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-db-us-east-1b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:subnet/subnet-0e4cc23506a330747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-0e4cc23506a330747",
            "map_public_ip_on_launch": false,
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-private-us-east-1a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:subnet/subnet-05edadaa7f3bb94ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.2.0/24",
            "id": "subnet-05edadaa7f3bb94ac",
            "map_public_ip_on_launch": false,
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-private-us-east-1b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:subnet/subnet-078c0fa52a002d25f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.21.0/24",
            "id": "subnet-078c0fa52a002d25f",
            "map_public_ip_on_launch": true,
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-public-us-east-1a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:subnet/subnet-0d8ee481750d68c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.22.0/24",
            "id": "subnet-0d8ee481750d68c79",
            "map_public_ip_on_launch": true,
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc-public-us-east-1b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516851544810:vpc/vpc-0e8cd6f1e3510eb39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0103995c50bc4b224",
            "default_route_table_id": "rtb-0b868b3659c99fe34",
            "default_security_group_id": "sg-0a5a2a123c6f1d756",
            "dhcp_options_id": "dopt-4111af3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e8cd6f1e3510eb39",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b868b3659c99fe34",
            "owner_id": "516851544810",
            "tags": {
              "Environment": "staging",
              "Name": "test-db-vpc",
              "Owner": "user"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "access_analyzer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "acm_pca",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "auto_scaling_plans",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "datasync",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ebs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_inference_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk_health",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "qldb_session",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.16.0/21",
              "3.5.0.0/20"
            ],
            "id": "vpce-0d9bf4983ee8f9e84",
            "owner_id": "516851544810",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01f2f3d6d53f57300",
              "rtb-0c7d7fa2c63bd9133"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "staging",
              "Owner": "user"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e8cd6f1e3510eb39"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "workspaces",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}